; ModuleID = '/home/carl/AnghaBench/htop/extr_TraceScreen.c_TraceScreen_draw.c'
source_filename = "/home/carl/AnghaBench/htop/extr_TraceScreen.c_TraceScreen_draw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32, i32 }

@CRT_colors = common dso_local global i32* null, align 8
@PANEL_HEADER_FOCUS = common dso_local global i64 0, align 8
@COLS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Trace of process %d - %s\00", align 1
@DEFAULT_COLOR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TraceScreen_draw(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load i32*, i32** @CRT_colors, align 8
  %4 = load i64, i64* @PANEL_HEADER_FOCUS, align 8
  %5 = getelementptr inbounds i32, i32* %3, i64 %4
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @attrset(i32 %6)
  %8 = load i32, i32* @COLS, align 4
  %9 = call i32 @mvhline(i32 0, i32 0, i8 signext 32, i32 %8)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 1
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @mvprintw(i32 0, i32 0, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %19)
  %21 = load i32*, i32** @CRT_colors, align 8
  %22 = load i64, i64* @DEFAULT_COLOR, align 8
  %23 = getelementptr inbounds i32, i32* %21, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @attrset(i32 %24)
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @IncSet_drawBar(i32 %28)
  ret void
}

declare dso_local i32 @attrset(i32) #1

declare dso_local i32 @mvhline(i32, i32, i8 signext, i32) #1

declare dso_local i32 @mvprintw(i32, i32, i8*, i32, i32) #1

declare dso_local i32 @IncSet_drawBar(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
